# lnmp-protocol

./: .gitignore  API.md  API_V05.md  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  MIGRATION.md  MIGRATION_NOTICE.md  PR_DRAFT.md  README.md  REPO-STRUCTURE.md  SUBTREES.md  lnmp-dev.code-workspace  lnmp-net.md  python-sdk.md
crates/lnmp/: Cargo.toml  README.md
crates/lnmp-codec/: Cargo.toml  OPTIMIZATIONS.md  PERFORMANCE.md  README.md
crates/lnmp-codec/benches/: v05_performance.rs  zero_copy_bench.rs  zero_copy_benchmark.rs
crates/lnmp-codec/examples/: aligned_zerocopy.rs  alignment_test.rs  binary_encoding.rs  binary_roundtrip.rs  encode_example.rs  encode_with_hints.rs  gen_delta_fixture.rs  hybrid_array_demo.rs  parse_example.rs  parse_simple.rs  round_trip.rs  v05_delta_encoding.rs  v05_nested_binary.rs  zero_copy_routing.rs  zero_copy_usage.rs
crates/lnmp-codec/scripts/: profile.sh
crates/lnmp-codec/src/: config.rs  container.rs  encoder.rs  equivalence.rs  error.rs  lexer.rs  lib.rs  normalizer.rs  parser.rs
crates/lnmp-codec/tests/: backward_compatibility_tests.rs  binary_entry_tests.rs  binary_error_handling.rs  binary_frame_tests.rs  binary_interoperability.rs  binary_roundtrip.rs  binary_value_encoding.rs  canonical_encoding_tests.rs  container_conformance.rs  delta_encoding_tests.rs  embedding_tests.rs  fid_validation_tests.rs  integration_tests.rs  property_roundtrip.proptest-regressions  property_roundtrip.rs  sanitize_property.proptest-regressions  sanitize_property.rs  schema_negotiation_tests.rs  spec_compatibility.rs  streaming_layer_tests.rs  v05_integration_tests.rs  varint_debug.rs
crates/lnmp-core/: Cargo.toml  PERFORMANCE.md  README.md
crates/lnmp-core/benches/: core_benchmarks.rs
crates/lnmp-core/examples/: basic_record.rs  checksum_debug.rs  checksum_transform_debug.rs  context_filtering.rs  context_stress_test.rs  find_crc.rs  nested_structures.rs  rag_prioritization.rs  strict_vs_loose.rs  structural_canonicalization.rs  type_hints.rs  v05_schema_negotiation.rs
crates/lnmp-core/src/: builder.rs  checksum.rs  container.rs  lib.rs  limits.rs  profile.rs  record.rs  registry.rs  types.rs
crates/lnmp-embedding/: Cargo.toml  DELTA.md  OPTIMIZATIONS.md  PERFORMANCE.md  README.md
crates/lnmp-embedding/benches/: embedding_bench.rs
crates/lnmp-embedding/examples/: batch_ops.rs  delta_compute.rs  embedding_demo.rs  zerocopy_similarity.rs
crates/lnmp-embedding/src/: decoder.rs  delta.rs  encoder.rs  lib.rs  vector.rs  view.rs
crates/lnmp-envelope/: Cargo.toml  PERFORMANCE.md  QUICK_START.md  README.md
crates/lnmp-envelope/benches/: envelope_benchmarks.rs
crates/lnmp-envelope/examples/: envelope_basic_usage.rs  http_binding.rs  kafka_binding.rs  llm_freshness.rs  text_format.rs
crates/lnmp-envelope/src/: binary_codec.rs  envelope.rs  error.rs  lib.rs  metadata.rs  text_codec.rs
crates/lnmp-llb/: Cargo.toml  PERFORMANCE.md  README.md
crates/lnmp-llb/benches/: llb_benchmarks.rs
crates/lnmp-llb/examples/: llb2_demo.rs  profile_config.rs
crates/lnmp-llb/src/: explain.rs  lib.rs  llb2.rs  prompt_opt.rs  shortform.rs
crates/lnmp-net/: Cargo.toml  README.md
crates/lnmp-net/examples/: basic.rs  content_routing.rs
crates/lnmp-net/src/: content_routing.rs  error.rs  kind.rs  lib.rs  message.rs  routing.rs
crates/lnmp-net/tests/: message_tests.rs  routing_tests.rs
crates/lnmp-quant/: BENCHMARK_RESULTS.md  Cargo.toml  PERFORMANCE.md  README.md
crates/lnmp-quant/benches/: profiling.rs  quant_bench.rs
crates/lnmp-quant/examples/: lnmp_integration.rs  quant_debug.rs
crates/lnmp-quant/src/: adaptive.rs  batch.rs  binary.rs  decode.rs  encode.rs  error.rs  fp16.rs  lib.rs  metrics.rs  qint4.rs  scheme.rs  vector.rs
crates/lnmp-quant/tests/: accuracy_tests.rs  quant_roundtrip.rs
crates/lnmp-sanitize/: Cargo.toml  README.md
crates/lnmp-sanitize/benches/: sanitize.rs
crates/lnmp-sanitize/examples/: basic_sanitization.rs  security_sanitization.rs
crates/lnmp-sanitize/proptest-regressions/: tests.txt
crates/lnmp-sanitize/src/: lib.rs  mode.rs  sanitize.rs  tests.rs
crates/lnmp-sfe/: Cargo.toml  README.md
crates/lnmp-sfe/benches/: context_bench.rs
crates/lnmp-sfe/examples/: context_profiling.rs  semantic_dictionary.rs
crates/lnmp-sfe/src/: context.rs  dictionary.rs  lib.rs
crates/lnmp-spatial/: Cargo.toml  OPTIMIZATION.md  PERFORMANCE.md  README.md
crates/lnmp-spatial/benches/: spatial_bench.rs
crates/lnmp-spatial/examples/: jitter_sim.rs  reflex_sim.rs
crates/lnmp-spatial/src/: checksum.rs  decoder.rs  delta.rs  encoder.rs  error.rs  lib.rs  math.rs  protocol.rs  transform.rs  types.rs  validate.rs
crates/lnmp-spatial/tests/: spatial_tests.rs
crates/lnmp-transport/: Cargo.toml  README.md
crates/lnmp-transport/benches/: transport_bench.rs
crates/lnmp-transport/examples/: basic_usage.rs  http_full.rs  otel_integration.rs  transport_basic_usage.rs
crates/lnmp-transport/src/: grpc.rs  http.rs  kafka.rs  lib.rs  nats.rs
crates/lnmp-transport/tests/: integration_tests.rs
crates/lnmp/examples/: distributed_cache.rs  iot_sensor_telemetry.rs  rag_context_manager.rs  robot_fleet_coordinator.rs  secure_api_gateway.rs
examples/examples/: Cargo.toml  README.md  binary_encoding.rs  binary_roundtrip.rs  checksum_debug.rs  context_scoring.rs  context_stress_test.rs  delta_demo.rs  deterministic_serialization.rs  explain_mode.rs  llb2_demo.rs  nested_structures.rs  rag_prioritization.rs  run_all_examples.rs  semantic_checksums.rs  semantic_dictionary.yaml  shortform.rs  strict_vs_loose.rs  structural_canonicalization.rs  type_hints.rs  v05_delta_encoding.rs  v05_llb2_binary.rs  v05_nested_binary.rs  v05_schema_negotiation.rs  v05_streaming.rs
showcase/city-pulse/: ARCHITECTURE.md  Cargo.toml  README.md  overview.md
tools/cli/: ARCHITECTURE.md  COMPLETIONS.md  CONFIG.md  Cargo.toml  ERROR_HANDLING.md  MIGRATION.md  QUICKSTART.md  README.md  card_data.json  card_data.lnmp  card_mapping.json  pikachu.json  pikachu.lnmp  pokemon_mapping.json  pokemon_team.json  test_simple.json  test_simple.lnmp
(+444 files in other folders)
