[workspace]
resolver = "2"
members = [
    "crates/lnmp-core",
    "crates/lnmp-codec",
    "crates/lnmp-sfe",
    "crates/lnmp-llb",
    "crates/lnmp-sanitize",
    "examples/examples",
    "tests/compliance/rust",
]

[workspace.package]
version = "0.5.0"
edition = "2021"
rust-version = "1.70.0"
authors = ["LNMP Contributors"]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
lnmp-core = { version = "0.5.0", path = "crates/lnmp-core" }
lnmp-sanitize = { version = "0.5.0", path = "crates/lnmp-sanitize" }
lnmp-codec = { version = "0.5.0", path = "crates/lnmp-codec" }
lnmp-llb = { version = "0.5.0", path = "crates/lnmp-llb" }
lnmp-sfe = { version = "0.5.0", path = "crates/lnmp-sfe" }
