[package]
name = "lnmp-codec"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Parser and encoder for LNMP (LLM Native Minimal Protocol) text format"
repository = "https://github.com/lnmplang/lnmp-protocol"
keywords = ["lnmp", "protocol", "parser", "encoder", "codec"]
categories = ["encoding", "parser-implementations"]

[dependencies]
lnmp-core = { workspace = true }
lnmp-sanitize = { workspace = true }
lnmp-sfe = { workspace = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.4"

[[bench]]
name = "v05_performance"
harness = false
