[package]
name = "lnmp-codec"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Parser and encoder for LNMP (LLM Native Minimal Protocol) text format"
repository = "https://github.com/lnmplang/lnmp-protocol"
keywords = ["lnmp", "protocol", "parser", "encoder", "codec"]
categories = ["encoding", "parser-implementations"]

[features]
default = []
log = ["dep:log"]

[dependencies]
lnmp-core = { workspace = true }
lnmp-embedding = { workspace = true }
lnmp-quant = { workspace = true }
lnmp-sanitize = { workspace = true }
lnmp-sfe = { workspace = true }
log = { version = "0.4", optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
# property tests
proptest = "1.2"

[[bench]]
name = "v05_performance"
harness = false
