[package]
name = "lnmp-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Core type definitions for LNMP (LLM Native Minimal Protocol)"
repository = "https://github.com/lnmplang/lnmp-protocol"
keywords = ["lnmp", "protocol", "llm", "data-format"]
categories = ["encoding", "data-structures"]

[dependencies]
crc32fast = "1.4"
crc = "2.1"
crc-catalog = "1.1"
lnmp-embedding = { workspace = true }
