[package]
name = "lnmp-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Core type definitions for LNMP (LLM Native Minimal Protocol)"
repository = "https://github.com/lnmplang/lnmp-protocol"
keywords = ["lnmp", "protocol", "llm", "data-format"]
categories = ["encoding", "data-structures"]

[dependencies]
crc32fast = "1.4"
crc = "2.1"
crc-catalog = "1.1"
lnmp-embedding = { workspace = true }
lnmp-quant = { workspace = true, optional = true }
thiserror = "1.0"

# Optional serde support for WASM
serde = { version = "1.0", features = ["derive"], optional = true }

[features]
default = ["quant", "serde"]
wasm = ["serde"]
quant = ["dep:lnmp-quant"]

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
lnmp-envelope = { path = "../lnmp-envelope" }
lnmp-sfe = { path = "../lnmp-sfe" }
lnmp-codec = { path = "../lnmp-codec" }
lnmp-llb = { path = "../lnmp-llb" }

[[bench]]
name = "core_benchmarks"
harness = false
