[package]
name = "lnmp-embedding"
version = "0.5.4"
edition = "2021"
rust-version.workspace = true
authors = ["LNMP Contributors"]
license = "MIT OR Apache-2.0"
description = "Vector embedding support for LNMP (LLM Native Minimal Protocol) with similarity calculations and delta encoding"
repository = "https://github.com/lnmplang/lnmp-protocol"
keywords = ["lnmp", "embedding", "vector", "similarity", "delta"]
categories = ["encoding", "data-structures", "algorithms"]

[dependencies]
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
byteorder = "1.4"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "embedding_bench"
harness = false
