[package]
name = "lnmp-envelope"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Operational metadata envelope for LNMP records"
keywords = ["lnmp", "envelope", "metadata", "tracing", "cloudevents"]
categories = ["encoding", "data-structures"]

[dependencies]
lnmp-core = { workspace = true }
serde = { version = "1.0", features = ["derive"], optional = true }
thiserror = "1.0"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "envelope_benchmarks"
harness = false

[features]
default = []
serde = ["dep:serde"]

[lib]
name = "lnmp_envelope"
path = "src/lib.rs"
