[package]
name = "lnmp-llb"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "LNMP-LLM Bridge Layer - Optimization layer for LLM prompt visibility and token efficiency"
license.workspace = true
repository = "https://github.com/lnmplang/lnmp-protocol"
keywords = ["lnmp", "llm", "serialization", "protocol"]
categories = ["encoding", "parser-implementations"]

[dependencies]
lnmp-core = { workspace = true }
lnmp-codec = { workspace = true }
lnmp-sfe = { workspace = true }

[dev-dependencies]
