[package]
name = "lnmp-llb"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "LNMP-LLM Bridge Layer - Optimization layer for LLM prompt visibility and token efficiency"
license.workspace = true
repository = "https://github.com/lnmplang/lnmp-protocol"
keywords = ["lnmp", "llm", "serialization", "protocol"]
categories = ["encoding", "parser-implementations"]

[dependencies]
lnmp-core = { workspace = true }
lnmp-embedding = { workspace = true }
lnmp-codec = { workspace = true }
lnmp-sfe = { workspace = true }
serde = { version = "1.0", features = ["derive"], optional = true }

[features]
default = []
serde = ["dep:serde"]

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "llb_benchmarks"
harness = false
