[package]
name = "lnmp-net"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Network behavior standardization for LNMP agent networks"
keywords = ["lnmp", "network", "llm", "agent", "routing"]
categories = ["network-programming", "encoding"]

[dependencies]
lnmp-core = { workspace = true }
lnmp-envelope = { workspace = true }
lnmp-sfe = { workspace = true }
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"], optional = true }
http = { version = "1.0", optional = true }

[dev-dependencies]
criterion = "0.5"

[features]
default = []
serde = ["dep:serde", "lnmp-envelope/serde"]
transport = ["dep:http"]

[lib]
name = "lnmp_net"
path = "src/lib.rs"
