[package]
name = "lnmp-quant"
version.workspace = true
edition = "2021"
rust-version.workspace = true
authors = ["LNMP Contributors"]
license = "MIT OR Apache-2.0"
description = "Quantization and compression for LNMP embedding vectors with minimal accuracy loss"
repository = "https://github.com/lnmplang/lnmp-protocol"
keywords = ["lnmp", "quantization", "embedding", "compression", "vector"]
categories = ["encoding", "compression", "algorithms"]

[dependencies]
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
byteorder = "1.4"
lnmp-embedding = { workspace = true }
half = "2.4"  # For FP16 half-precision float support

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
lnmp-core = { workspace = true }


[[bench]]
name = "quant_bench"
harness = false

[[bench]]
name = "profiling"
harness = false
