[package]
name = "lnmp-sanitize"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Lenient sanitizer and normalizer for LNMP text inputs"
repository = "https://github.com/lnmplang/lnmp-protocol"

[dependencies]

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.2"

[[bench]]
name = "sanitize"
harness = false
