[package]
name = "lnmp-sfe"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Semantic Fidelity Engine for LNMP (LLM Native Minimal Protocol)"
repository = "https://github.com/lnmplang/lnmp"
keywords = ["lnmp", "protocol", "semantic", "dictionary"]
categories = ["encoding", "data-structures"]

[dependencies]
lnmp-core = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"

[dev-dependencies]
tempfile = "3.8"
