[package]
name = "lnmp-sfe"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Semantic Fidelity Engine for LNMP - semantic dictionary, equivalence mapping, and context profiling"
repository = "https://github.com/lnmplang/lnmp-protocol"
keywords = ["lnmp", "protocol", "semantic", "dictionary", "context"]
categories = ["encoding", "data-structures"]

[dependencies]
lnmp-core = { workspace = true }
lnmp-envelope = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"

[dev-dependencies]
tempfile = "3.8"
criterion = "0.5"

[[bench]]
name = "context_bench"
harness = false

