[package]
name = "lnmp-spatial"
version.workspace = true
edition = "2021"
description = "Spatial awareness types and logic for LNMP protocol"
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords = ["lnmp", "spatial", "robotics", "protocol", "control"]
categories = ["encoding", "science::robotics", "simulation"]

[dependencies]
lnmp-core = { workspace = true }
bytes = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
crc32fast = "1.4"
bincode = "1.3"

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
criterion = "0.5"

[[bench]]
name = "spatial_bench"
harness = false
