[package]
name = "lnmp"
version = "0.5.6"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "LNMP (LLM Native Minimal Protocol) - Meta crate providing unified access to all LNMP modules"
repository = "https://github.com/lnmplang/lnmp-protocol"
keywords = ["lnmp", "protocol", "llm", "data-format", "meta"]
categories = ["encoding", "data-structures"]

[dependencies]
lnmp-core = { workspace = true }
lnmp-codec = { workspace = true }
lnmp-embedding = { workspace = true }
lnmp-envelope = { workspace = true }
lnmp-llb = { workspace = true }
lnmp-quant = { workspace = true }
lnmp-sanitize = { workspace = true }
lnmp-sfe = { workspace = true }
lnmp-spatial = { workspace = true }
