[package]
name = "lnmp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "LNMP (LLM Native Minimal Protocol) - Meta crate providing unified access to all LNMP modules"
repository = "https://github.com/lnmplang/lnmp-protocol"
keywords = ["lnmp", "protocol", "llm", "data-format", "meta"]
categories = ["encoding", "data-structures"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
lnmp-core = { workspace = true, features = [], optional = false }
lnmp-codec = { workspace = true }
lnmp-embedding = { workspace = true }
lnmp-envelope = { workspace = true }
lnmp-llb = { workspace = true }
lnmp-quant = { workspace = true }
lnmp-sanitize = { workspace = true }
lnmp-sfe = { workspace = true }
lnmp-spatial = { workspace = true }
lnmp-transport = { workspace = true }
lnmp-net = { workspace = true }

# WASM dependencies
wasm-bindgen = { version = "0.2", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
serde-wasm-bindgen = { version = "0.6", optional = true }
js-sys = { version = "0.3", optional = true }
http = { version = "1.0", optional = true }
bincode = { version = "1.3", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }

[features]
default = []
wasm = [
    "wasm-bindgen",
    "serde",
    "serde-wasm-bindgen",
    "lnmp-core/wasm",
    "lnmp-core/quant",
    "lnmp-envelope/serde",
    "lnmp-net/serde",
    "lnmp-llb/serde",
    "js-sys",
    "http",
    "bincode",
    "console_error_panic_hook"
]
