[package]
name = "lnmp-examples"
version = "0.1.0"
edition = "2021"
publish = false

[[example]]
name = "type_hints"
path = "type_hints.rs"

[[example]]
name = "strict_vs_loose"
path = "strict_vs_loose.rs"

[[example]]
name = "deterministic_serialization"
path = "deterministic_serialization.rs"

[[example]]
name = "semantic_checksums"
path = "semantic_checksums.rs"

[[example]]
name = "nested_structures"
path = "nested_structures.rs"

[[example]]
name = "structural_canonicalization"
path = "structural_canonicalization.rs"

[[example]]
name = "explain_mode"
path = "explain_mode.rs"

[[example]]
name = "shortform"
path = "shortform.rs"

[[example]]
name = "binary_encoding"
path = "binary_encoding.rs"

[[example]]
name = "binary_roundtrip"
path = "binary_roundtrip.rs"

[[example]]
name = "llb2_demo"
path = "llb2_demo.rs"

[[example]]
name = "v05_nested_binary"
path = "v05_nested_binary.rs"

[[example]]
name = "v05_streaming"
path = "v05_streaming.rs"

[[example]]
name = "v05_schema_negotiation"
path = "v05_schema_negotiation.rs"

[[example]]
name = "v05_delta_encoding"
path = "v05_delta_encoding.rs"

[[example]]
name = "v05_llb2_binary"
path = "v05_llb2_binary.rs"

[[example]]
name = "embedding_demo"
path = "embedding_demo.rs"

[[example]]
name = "delta_demo"
path = "delta_demo.rs"

[[bin]]
name = "run_all_examples"
path = "run_all_examples.rs"

[[example]]
name = "spatial_robot"
path = "../spatial_robot.rs"

[[example]]
name = "spatial_stream"
path = "../spatial_stream.rs"

[[example]]
name = "spatial_jitter_sim"
path = "../spatial_jitter_sim.rs"

[[example]]
name = "spatial_reflex_sim"
path = "../spatial_reflex_sim.rs"

[dependencies]
lnmp-core.workspace = true
lnmp-codec.workspace = true
lnmp-llb.workspace = true
lnmp-embedding.workspace = true
lnmp-spatial = { path = "../../crates/lnmp-spatial" }
hex = "0.4"
