[package]
name = "city-pulse"
version = "1.0.0"
edition = "2021"
authors = ["LNMP Team"]
license = "MIT"
description = "CityPulse - Smart City IoT Platform (LNMP Showcase)"


[[bin]]
name = "test_components"
path = "src/test_components.rs"


[[bin]]
name = "test_agents"
path = "src/test_agents.rs"

[[bin]]
name = "run_scenario"
path = "src/run_scenario.rs"

[[bin]]
name = "performance_benchmark"
path = "src/performance_benchmark.rs"

[dependencies]
# Use meta lnmp crate for all LNMP functionality
lnmp = { path = "../../crates/lnmp" }
serde_json = "1.0"
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
dotenv = "0.15"

[dev-dependencies]
