[package]
name = "lnmp-cli"
version = "0.5.7"
edition = "2021"
authors = ["LNMP Contributors"]
description = "Command-line tools for working with LNMP protocol"
license = "MIT"

[[bin]]
name = "lnmp-cli"
path = "src/main.rs"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"

[dependencies]
# LNMP meta crate - provides unified access to all LNMP modules
lnmp = { workspace = true }

# CLI framework
clap = { version = "4.5", features = ["derive", "cargo", "env"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Serialization (for JSON conversion)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
chrono = { version = "0.4", features = ["serde"] }

# Performance monitoring
ratatui = "0.25"          # Terminal UI framework
crossterm = "0.27"        # Terminal control
indicatif = "0.17"

# Terminal detection (for color auto mode)
atty = "0.2"

# UUID generation (for envelope trace IDs)
uuid = { version = "1.0", features = ["v4"] }
