[package]
name = "lnmp_wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
lnmp-core = { path = "../../../lnmp-protocol/crates/lnmp-core" }
lnmp-codec = { path = "../../../lnmp-protocol/crates/lnmp-codec" }
lnmp-sanitize = { path = "../../../lnmp-protocol/crates/lnmp-sanitize" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
serde_yaml = "0.9"

[features]
default = []
